--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .ts,.tsx,.mdx"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "next": "14.2.5",
     "nextra": "^2.13.4",
